# pokeachieve-tracker

./: .gitignore  BUILD_DIRECTORY.bat  BUILD_INSTRUCTIONS.md  LICENSE  POKEACHIEVE_API_GUIDE.md  PROJECT_MEM.md  PokeAchieve-Tracker.spec  Pokemon - Emerald Version (U).srm  README.md  TRACKER_INTEGRATION.md  USER_GUIDE.txt  add_debug.py  add_more_debug.py  azahar_client.py  build_windows.bat  changelog_20260301.md  changelog_20260307_tracker_stabilization.md  check_lines.py  debug_tool.py  fix_all_strings.py  fix_broken.py  fix_final.py  fix_game_parse.py  fix_header.py  fix_lines.py  fix_matching.py  fix_msgbox.py  fix_multiline.py  fix_sync.py  fix_syntax.py  game_configs.py  gen3_ability_names.json  gen3_gender_map.json  gen3_internal_to_national.json  gen3_move_names.json  gen3_species_abilities.json  generate_achievements.py  hunt_encounter_catalog.json  legacy_item_mappings.json  profiles.json  (+5 more)
pokemon_cv/: README.md  pyproject.toml  requirements.txt
pokemon_cv/configs/: default.yaml
pokemon_cv/scripts/: build_reference_index.py  evaluate_pipeline.py  list_cameras.py  list_obs_scenes.py  train_detector.py  train_embedding_model.py
pokemon_cv/src/pokemon_cv/: config.py
pokemon_cv/src/pokemon_cv/app/: __init__.py  cli.py  pipeline.py
pokemon_cv/src/pokemon_cv/capture/: __init__.py  obs_scene.py  webcam.py
pokemon_cv/src/pokemon_cv/detect/: base.py  roi_detector.py  yolo_detector.py
pokemon_cv/src/pokemon_cv/embed/: __init__.py  dataset.py  model.py  (+1 more)
pokemon_cv/tests/: test_camera_selection.py  test_faiss_matcher.py  test_match_logic.py  test_smoothing.py
(+86 files in other folders)
